*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9260 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -159,6 +159,8 @@ module.RapidId.desc=Зручнае поле ўводу наверсе старо
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 
 #Save for work
