--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -89,12 +89,14 @@ module.EmbedMedia.EmbedYoutubeVideos.desc=YouTube Videos einbetten
 module.EmbedMedia.EmbedVimeoVideos.desc=Vimeo Videos einbetten
 module.EmbedMedia.EmbedFunnyOrDieVideos.desc=FunnyOrDie Videos einbetten
 module.EmbedMedia.EmbedDailymotionVideos.desc=Dailymotion Videos einbetten
+module.EmbedMedia.EmbedModeOEmebed.desc=OEmbed nutzen um Medien einzubinden (nur Firefox und Chrome)
 module.EmbedMedia.ReplaceLinksByTitles.desc=Ersetzt den ursprünglichen Text des Links durch den Titel des Mediums. z.B\: durch den Bildtitel 
 module.EmbedMedia.EmbedSoundCloud.desc=Soundcloud einbetten 
 module.EmbedMedia.EmbedFlickrImages.desc=Flickr Bilder einbetten 
 module.EmbedMedia.EmbedDeviantArtImages.desc=Deviantart Bilder einbetten 
 module.EmbedMedia.EmbedGenericImages.desc=Bilder direkt einbetten
 module.EmbedMedia.EmbedGenericImagesClever.desc=Versuche das tatsächliche Bild einzubetten auch wenn der Link auf den ersten Blick nicht auf ein Bild hindeutet.
+module.EmbedMedia.EmbedImageshack.desc=Erweiterte ImageShack-Unterstützung (nur Firefox und Chrome)
 #Forum direct page links
 module.DirectPageLinks.desc=Fügt Links bei mehrseitigen Threads ein, welche es erlauben direkt auf eine bestimmte Seite zu springen.
 #
@@ -127,6 +129,7 @@ module.LinksAchievements.desc=Links hinzufügen zur Errungenschaften-Seite
 module.LinksStaff.desc=Links hinzufügen zur Spezialisten-Seite
 module.LinksTracker.desc=Links zu externen Trackern auf den betreffenden NT- und Spieler-Seiten
 module.LinksClubTransfers.desc=Links zu externen Seiten im Bereich der Transferseite
+module.LinksWorld.desc=Links hinzufügen auf der Welt-Seite
 module.LoyaltyDisplay.desc=Hebt den Effekt von Loyalität und Heimatvereinsbonus auf deinen Spielerseiten hervor (falls "Fähigkeitsbalken anzeigen" der Hattrick Optionen aktiviert ist)
 module.ForumAlterHeaderLine.desc=Veränderungen des Postingkopfes
 module.Singleline2.desc=Alternatives einzeiliges Postingkopf Modul. Ein wenig schneller als die andere Version. Deaktiviert einige ChangePosting-Module, welche miteinander in Konflikt stehen.
@@ -274,6 +277,7 @@ module.LeagueNewsFilter.lineup_changes.desc=Nur Aufstellungen anzeigen
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Manager die online sind als erstes auf der Regionen-Seite anzeigen. Achtung\! Falls mehr als 100 Manager online sind, so kann die Anzeige sehr verlangsamt werden\!
 module.TeamPopupLinks.desc=Anzeige eines kleinen Popups über den Teamnamen mit Direktlinks
+module.TeamPopupLinks.TeamHighlight.desc=Ausgewählten Verein in Tabellen hervorheben
 module.TeamPopupLinks.TeamLinks.desc=TeamPopupLinks den Vereinslinks zufügen
 module.TeamPopupLinks.UserLinks.desc=TeamPopupLinks den Managerlinks zufügen
 module.TeamPopupLinks.Manager.desc=Link zum Manager (nur für Vereinslinks)
@@ -375,18 +379,24 @@ module.MatchSimulator.desc=Fügt einen Spielsimulator der Aufstellungsseite zu
 module.MatchSimulator.RatingsOnTop.desc=Die Bewertungsvorhersage als Overlay (HT Standard)
 module.MatchSimulator.RatingsBelow.desc=Anzeige der Vorhersage unter dem Interface
 module.MatchSimulator.RatingsRight.desc=Anzeige der Vorhersage rechts des Interfaces
+module.MatchSimulator.HTMSPrediction.desc=HTMS Vorhersage anzeigen
 module.HeaderToggle.desc=Auf h2-Überschriften klicken wechselt zwischen Anzeigen und Verbergen des zugehörigen Bereiches. Die letzte Einstellung wird sich dabei gemerkt basierend auf Typ der Seite und Überschrift. 
 module.Filter.desc=Fügt oben auf der Spielerseite die Möglichkeit hinzu, die Spieler nach gewissen Kriterien zu filtern
 module.RatingsDisplay.desc=Stellt die durchschnittlichen Bewertungen in alternativer Weise dar
 module.RatingsDisplay.DenominationsRange.desc=Im 0-20 Wertebereich von Hattrick
 module.RatingsDisplay.HatStats.desc=Als HatStats
+module.RatingsDisplay.HTSums.desc=Als Hattricks Bewertungssumme
 module.SafeForWork.desc=Ersetzt Icon und Titel von Hattrick Tabs um sie zB auf Arbeit weniger auffällig zu machen. Gegebenenfalls solltest Du zusätzlich die Alarmmodule deaktivieren.
+module.PlayerStatsExperience.desc=Sublevel der Erfahrung auf der Spielerstatistik-Seite anzeigen
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
+rating.average=Durchschnittliche Bewertung
 
 #Save for work
 SafeForWork.title=Titel
@@ -420,6 +430,12 @@ YouthPromotes.today=Spieler kann heute befördert werden.
 #teamstats+filters
 TeamStats.boxheader=Teamübersicht
 TeamStats.General=Allgemein
+TeamStats.Attributes=Eigenschaft
+TeamStats.Skills=Fähigkeit
+TeamStats.Players=Spieler
+TeamStats.Total=Summe
+TeamStats.Selected=Ausgewählt
+TeamStats.Average=Durchschnitt
 TeamStats.PlayerNotToOld=Spieler < 19 Jahre
 TeamStats.PlayerToOld=Spieler >\= 19 Jahre
 TeamStats.Cards=Karten
@@ -545,6 +561,7 @@ Filters.ok=Ok
 Filters.clear=Zurücksetzen
 Filters.noFilter=Kein Filter
 Filters.none=Keine
+Filters.Attributes=Eigenschaftenfilter
 Filters.days=Tage
 Filters.tsi=TSI
 Filters.stamina=Kondition
@@ -554,6 +571,10 @@ Filters.specialty=Spezialität
 Filters.stars=Sterne
 Filters.minimum=Mind.
 Filters.maximum=Max.
+Filters.over=Über
+Filters.under=Unter
+Filters.equal=Gleich
+Filters.notEqual=Ungleich
 
 
 match.type.league=Liga
@@ -576,8 +597,18 @@ matchOrder.swapPositions=Seiten vertauschen
 matchOrder.options=Optionen
 matchOrder.staminaDiscount=Ausdauer einbeziehen
 matchOrder.staminaDiscount.title=Sektorenbewertungen werden entsprechend des Beitrags der Positionen zu den einzelnen Sektoren angepasst
+matchOrder.attVsDef=Angriff vs. Verteidigung
+matchOrder.attVsDef.title=Gegnerische Sektorenbewertung entweder als Angriff-vs-Verteidigung oder als Angriff-vs-Angriff anzeigen
 matchOrder.summary=Zusammenfassung
 matchOrder.tournamentMatch=Turnierspiel
+matchOrder.homeAway=Autoerkennung oder gezielt Heim- resp. Auswärtssektorenbewertung nutzen?
+matchOrder.homeAway.abbr=H/A
+matchOrder.default=Standard
+matchOrder.default.abbr=S
+matchOrder.home=Heim
+matchOrder.home.abbr=H
+matchOrder.away=Auswärts
+matchOrder.away.abbr=A
 
 #Skills
 Playmaking=Spielaufbau
