--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -394,6 +394,13 @@ module.PlayerStatsExperience.desc=Displays the experience subskill on the player
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+PlayerStatsExperience.ExperienceText=He already collected between %1 and %2 of 28 experience points. His experience is between %3 and %4.
+PlayerStatsExperience.NotAllMatchesVisible=The actual value might be higher because not all matches are displayed.
+PlayerStatsExperience.NoSkillUpFound=The actual value might be higher because no recorded experience-skillup was found.
+PlayerStatsExperience.ExperienceChange.title=Experience gain
+PlayerStatsExperience.ExperienceChange.title.abbr=XP+
+
 #Series statistics
 rating.average=Average rating
 
