--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -392,6 +392,8 @@ module.PlayerStatsExperience.desc=Muestra el subnivel de experiencia en la pági
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 rating.average=Calificaciones promedio
 
