--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -382,6 +382,8 @@ module.RatingsDisplay.HatStats.desc=Hatstatteina
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 rating.average=Keskiarvoarvostelu
 
