--- a/content/locale/fy-NL/foxtrick.properties
+++ b/content/locale/fy-NL/foxtrick.properties
@@ -138,6 +138,8 @@ module.MatchIncome.desc=Wedstriidynkommen yn wedstriidrapport
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 
 #Save for work
