--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -208,6 +208,8 @@ module.SafeForWork.desc=Rempraza a icona e o texto do título das lapelas de Hat
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 rating.average=Calificacións medias
 
