--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -317,6 +317,8 @@ module.MyMonitor.desc=A barátok és riválisok legutóbbi meccseinek figyelése
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 
 #Save for work
