--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -387,6 +387,8 @@ module.SafeForWork.desc=Vervangt het pictogram en de titeltekst van de Hattrick 
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 
 #Save for work
