--- a/content/locale/pt-PT/foxtrick.properties
+++ b/content/locale/pt-PT/foxtrick.properties
@@ -238,6 +238,8 @@ module.MatchOrderInterface.StayOnPage.desc=Permanecer na página de ordens depoi
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 
 #Save for work
