--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -386,6 +386,8 @@ module.SafeForWork.desc=Inlocuieste pictograma si titlul tab-urilor Hattrick pen
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 
 #Save for work
