--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -244,6 +244,8 @@ module.RapidId.desc=Chytré okienko na vrchu stránky pre zobrazenie tímu, hrá
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 
 #Save for work
