--- a/content/locale/sv-SE/foxtrick.properties
+++ b/content/locale/sv-SE/foxtrick.properties
@@ -364,6 +364,8 @@ module.RatingsDisplay.HatStats.desc=Som HatStats
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 
 #Save for work
