--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -391,6 +391,8 @@ module.PlayerStatsExperience.desc=Muestra el subnivel de experiencia en la pági
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 rating.average=Rating promedio
 
