--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -378,6 +378,8 @@ module.PlayerStatsExperience.desc=Despliega los subniveles de experiencia en la 
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 rating.average=Rendimiento promedio
 
