--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -324,6 +324,8 @@ module.MatchOrderInterface.Specialties.desc=نمایش تخصص بازیکن
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 
 #Save for work
