--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -392,6 +392,8 @@ module.PlayerStatsExperience.desc=Les points d'expérience acquis s'affichent su
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 rating.average=Notes moyennes
 
