--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -393,6 +393,8 @@ module.PlayerStatsExperience.desc=Pokazuje podrazinu iskustva na igračevoj stra
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 rating.average=Prosječna ocjena
 
