--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -393,6 +393,8 @@ module.PlayerStatsExperience.desc=Consente di visualizzare i decimali dell'esper
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 rating.average=Valutazione media
 
