--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -207,6 +207,8 @@ module.MatchTables.RemoveTime.desc=D'Matchzäit gëtt an der aktueller Matchtabe
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 
 #Save for work
