--- a/content/locale/mk/foxtrick.properties
+++ b/content/locale/mk/foxtrick.properties
@@ -167,6 +167,8 @@ module.MatchIncome.desc=Приход од натпреварот во извеш
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 
 #Save for work
