--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -210,6 +210,8 @@ module.MatchTables.RemoveTime.desc=Heq kohet e ndeshjeve te tabela
 
 # IN-GAME STRINGS. translate first
 
+#PlayerStatsExperience
+
 #Series statistics
 
 #Save for work
