--- a/content/locale/ko/release-notes.xml
+++ b/content/locale/ko/release-notes.xml
@@ -15,8 +15,9 @@
 
 <note version="0.9.2">
 <item>● 또 하나의 거대한 언어 업데이트. 모든 번역가들에게 다시 한 번 감사드립니다</item>
-<item>● <module>TeamPopupLinks</module>: 테이블의 현재 팀을 선택적으로 강조합니다 (기본 활성화)</item>
-<item>● <module>RatingsDisplay</module>: 평균 별점과 레이팅을 시리즈 통계 테이블에 추가합니다</item>
+<item>● NEW: <module>PlayerStatsExperience</module>: 각 경기에서 획득한 경험과 현재 소수부를 나타냅니다 (CatzHoek)</item>
+<item>● NEW: <module>TeamPopupLinks</module>: 테이블의 현재 팀을 선택적으로 강조합니다 (기본 활성화)</item>
+<item>● NEW: <module>RatingsDisplay</module>: 평균 별점과 레이팅을 시리즈 통계 테이블에 추가합니다</item>
 <item>● 이적 명단 검색을 위한 <module>SkillTable</module>: 부상 정보를 수정하였습니다</item>
 <item>● MatchReportFormat: 부정적인 SE 아이콘 추가하였습니다</item>
 <item>● Links: 추가된 동적 링크를 기본적으로 활성화합니다</item>
