--- a/content/locale/ko/release-notes.xml
+++ b/content/locale/ko/release-notes.xml
@@ -14,59 +14,59 @@
 </note>
 
 <note version="0.9.2">
-<item>● 또 하나의 거대한 언어 업데이트. 모든 번역가들에게 다시 한 번 감사드립니다</item>
-<item>● NEW: <module>PlayerStatsExperience</module>: 각 경기에서 획득한 경험과 현재 소수부를 나타냅니다 (CatzHoek)</item>
-<item>● NEW: <module>TeamPopupLinks</module>: 테이블의 현재 팀을 선택적으로 강조합니다 (기본 활성화)</item>
-<item>● NEW: <module>RatingsDisplay</module>: 평균 별점과 레이팅을 시리즈 통계 테이블에 추가합니다</item>
-<item>● 이적 명단 검색을 위한 <module>SkillTable</module>: 부상 정보를 수정하였습니다</item>
-<item>● MatchReportFormat: 부정적인 SE 아이콘 추가하였습니다</item>
-<item>● Links: 추가된 동적 링크를 기본적으로 활성화합니다</item>
+<item>● 또 하나의 거대한 언어 업데이트. 모든 번역가분들에게 다시 한 번 감사드립니다.</item>
+<item>● NEW: <module>PlayerStatsExperience</module>: 각 경기에서 획득한 경험 포인트와 현재 소수부를 나타냅니다. (CatzHoek)</item>
+<item>● NEW: <module>TeamPopupLinks</module>: 테이블의 현재 팀을 선택적으로 강조합니다. (기본 활성화)</item>
+<item>● NEW: <module>RatingsDisplay</module>: 평균 별점과 평균 레이팅을 시리즈 통계 테이블에 추가합니다.</item>
+<item>● 이적 명단 검색을 위한 <module>SkillTable</module>: 부상 정보를 수정하였습니다.</item>
+<item>● MatchReportFormat: 부정적인 SE 아이콘 추가하였습니다.</item>
+<item>● Links: 추가된 동적 링크를 기본적으로 활성화합니다.</item>
 <item>● Links and staffmarker: 대역폭 절약을 위해 불러오기를 압축하였습니다.</item>
-<item>● Links: 동작하지 않아 제거상태인 커스텀 링크 수정하였습니다</item>
-<item>● ForumAlterHeaderLine: 스레드 개설자 강조하고 간단한 머리글 수정을 위해 postid 제거하였습니다</item>
-<item>● ForumStripHattrickLinks: 확인 옵션을 수정하였습니다</item>
-<item>● MatchSimulator: 비 토너먼트 경기를 추가하는 것을 수정하였습니다</item>
-<item>● CopyYouth: 쓸모없는 선수 소스 복사를 제거하였습니다</item>
-<item>● AMO 규정을 위한 몇 가지 작업이 있었습니다</item>
+<item>● Links: 동작하지 않아 제거 상태인 커스텀 링크를 수정하였습니다.</item>
+<item>● ForumAlterHeaderLine: 토론장 스레드 개설자를 강조하고 간단한 머리글 수정을 위해 postid 제거하였습니다.</item>
+<item>● ForumStripHattrickLinks: 확인 옵션을 수정하였습니다.</item>
+<item>● MatchSimulator: 비 토너먼트 경기를 추가하는 것을 수정하였습니다.</item>
+<item>● CopyYouth: 쓸모없는 선수 소스 복사 기능을 제거하였습니다.</item>
+<item>● AMO 규정을 위한 몇 가지 작업이 있었습니다.</item>
 </note>
 
 <note version="0.9.1">
-<item>● HTMS: 전술을 다시 사용합니다</item>
-<item>● Tablesort: 실수 정렬</item>
+<item>● HTMS: 전술을 다시 사용합니다.</item>
+<item>● Tablesort: 실수 부분까지 정렬합니다.</item>
 </note>
 
 <note version="0.9.0.5">
-<item>● <module>SafeForWork</module> : 아이콘과 설명으로 해트트릭 탭을 위장 기능 추가</item>
-<item>● <module>ForumYouthIcons</module>: 토너먼트 바로가기 추가</item>
-<item>● <module>NewMail</module>: 다시 사운드 옵션이 있습니다</item>
-<item>● <module>TeamPopupLinks</module>: 커스텀 링크 양식 변경되었습니다</item>
-<item>● <module>MatchSimulator</module>: 레이팅 복사를 수정하고 토너먼트를 지원합니다</item>
-<item>● 메인 탭에 선수 특수능력 아이콘의 선택적인 옵션 추가</item>
+<item>● <module>SafeForWork</module> : 아이콘과 설명으로 해트트릭 탭을 위장하는 기능 추가하였습니다.</item>
+<item>● <module>ForumYouthIcons</module>: 토너먼트 바로가기를 추가하였습니다.</item>
+<item>● <module>NewMail</module>: 다시 사운드 옵션이 있습니다.</item>
+<item>● <module>TeamPopupLinks</module>: 커스텀 링크 양식 변경되었습니다.</item>
+<item>● <module>MatchSimulator</module>: 레이팅 복사를 수정하고 토너먼트를 지원합니다.</item>
+<item>● 메인 탭에 선수 특수능력 아이콘의 선택적인 옵션을 추가하였습니다.</item>
 <item>● Foxtrick 툴바 아이콘으로 기능 강조 토글 이동. 환경 메인 탭</item>
 <item>● 사용하지 않는 MatchTables 모듈 제거</item>
-<item>● MatchSimulator 체력 효과: 텍스트는 반올림하고 수치는 반올림되지 않고 표시합니다</item>
-<item>● "foxtrick://"-style을 연결하는 환경설정을 수정하였습니다</item>
-<item>● 이제 Matchreport는 모든 이벤트에 대한 풍선말을 표시합니다</item>
-<item>● 링크 리소스를 아직까지 다른 서버로 이전되었습니다</item>
+<item>● MatchSimulator 체력 효과: 텍스트는 반올림하고 수치는 반올림되지 않고 표시합니다.</item>
+<item>● "foxtrick://"-style을 연결하는 환경설정을 수정하였습니다.</item>
+<item>● 이제 Matchreport는 모든 이벤트에 대한 풍선말을 표시합니다.</item>
+<item>● 링크 리소스를 아직까지 다른 서버로 이전되었습니다.</item>
 <item>● AMO 규정 개선을 위한 몇 가지 내부 변화</item>
 <item>● 수많은 번역 업데이트: aegeansailor, brauxx, Mod-Utku, ebitechv, Polytropos, gkon13, SOLARIS1973, Fieras, margaale, ipefix, stephan.cardot, OmaniMilani, LambdaB, SI-CH, Convincedd, margaale, ljushaff, serjhanti, playMaker, CoRrRan, Aristodemos, margaale, spider007, FeritAkarsu 그리고 저희가 빠뜨린 분이 상심이 크시다면 저희에게 연락 주세요. 정말 굉장합니다! 여러분 모두에게 감사드립니다!</item>
 </note>
 
 <note version="0.9.0.4">
-<item>● 링크 리소스를 다른 서버로 이전되었습니다</item>
-<item>● MatchReportFormat에 있는 아이콘 제목으로 기본적인 영어 이벤트 문장 추가되었습니다</item>
-<item>● 토너먼트 경기에 대해서 MatchReportFormat 과 MatchPlayerColoring 활성화되었습니다</item>
+<item>● 링크 리소스를 다른 서버로 이전되었습니다.</item>
+<item>● MatchReportFormat에 있는 아이콘 제목으로 기본적인 영어 이벤트 문장 추가되었습니다.</item>
+<item>● 토너먼트 경기에 대해서 MatchReportFormat 과 MatchPlayerColoring 활성화되었습니다.</item>
 </note>
 
 <note version="0.9.0.3">
-<item>● Stage만: HT 페이지 양식이 바뀐 후 다수의 모듈 수정</item>
+<item>● Stage만: HT 페이지 양식이 바뀐 후 다수의 모듈을 수정하였습니다.</item>
 </note>
 
 <note version="0.9.0.2">
-<item>● LoyaltyDisplay 충돌을 야기시키는 최근 Chrome 업데이트 수정</item>
-<item>● MatchReportFormat의 유소년 선수의 라인업 연결 수정</item>
-<item>● MatchSimulator 체력 효과 변경</item>
-<item>● 특수능력에 대한 새로운 기호</item>
+<item>● LoyaltyDisplay 충돌을 야기시키는 최근 Chrome 업데이트을 수정하였습니다.</item>
+<item>● MatchReportFormat의 유소년 선수의 라인업 연결을 수정하였습니다.</item>
+<item>● MatchSimulator의 체력 효과를 변경하였습니다.</item>
+<item>● 특수능력에 대한 새로운 기호를 추가하였습니다.</item>
 <item>● 다수의 번역 업데이트</item>
 </note>
 
@@ -80,8 +80,8 @@
 <item><xhtml:b>현지화:</xhtml:b></item>
 <item>crowdsourcing 번역 서비스<xhtml:a href="http://www.crowdin.net/project/foxtrick">http://www.crowdin.net</xhtml:a> 통합. (CatzHoek, Convincedd)</item>
 <item>다수의 번역 업데이트. (Catzhoek 과 많은 번역가들: GM-murko, LambdaB, Paulo Francisco Martins, MEO_Comandante, Jānis Pamiljans, GZ-grobas, SI-CH, bigpapy, edzus, silkevicious, Max_Schreck, TheZayc, -Iuve-, Mcload, Polytropos, MrAli, ripaldo, Ryo567, Louzao, kirja, MartinsPF)</item>
-<item>여러분 모두 감사합니다. <xhtml:a href="http://crowdin.net/project/foxtrick">http://crowdin.net/project/foxtrick</xhtml:a>에서 Foxtrick을 계속 번역해주세요</item>
-<item>번역에 대한 정보는 [post=15466991.1] 또는 [post=15466972.1]을 보세요</item>
+<item>여러분 모두 감사합니다. <xhtml:a href="http://crowdin.net/project/foxtrick">http://crowdin.net/project/foxtrick</xhtml:a>에서 Foxtrick을 계속 번역해주세요.</item>
+<item>번역에 대한 정보는 [post=15466991.1] 또는 [post=15466972.1]을 보세요.</item>
 <item></item>
 <item><xhtml:b>기능 강조</xhtml:b></item>
 <item>우리는 더 쉽게 FoxTrick 기능과 책임 모듈의 감지하기 위한 기능 강조를 포함했습니다. 모든 페이지의 우측 하단의 FoxTrick 버전을 클릭함으로써 켜고 끌 수 있습니다. 한 번 다시 불러온 후에 풍선말 툴팁에 책임 모듈을 나타냅니다.</item>
