*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9264 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -393,6 +393,10 @@ module.PlayerStatsExperience.desc=Les points d'expérience acquis s'affichent su
 # IN-GAME STRINGS. translate first
 
 #PlayerStatsExperience
+PlayerStatsExperience.ExperienceText=Il a déjà accumulé entre %1 et %2 des 28 points d'expérience requis. Son niveau d'expérience se situe entre %3 et %4.
+PlayerStatsExperience.NoSkillUpFound=La valeur réelle pourrait être plus élevée car aucun gain d'expérience n'a été trouvé.
+PlayerStatsExperience.ExperienceChange.title=Gain d'expérience
+PlayerStatsExperience.ExperienceChange.title.abbr=XP+
 
 #Series statistics
 rating.average=Notes moyennes
