--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -394,6 +394,11 @@ module.PlayerStatsExperience.desc=Pokazuje podrazinu iskustva na igračevoj stra
 # IN-GAME STRINGS. translate first
 
 #PlayerStatsExperience
+PlayerStatsExperience.ExperienceText=Već je prikupio između %1 i %2 od 28 iskustvenih bodova. Njegovo iskustvo je između %3 i %4.
+PlayerStatsExperience.NotAllMatchesVisible=Stvarna brojka bi mogla biti veća jer nisu prikazane sve utakmice.
+PlayerStatsExperience.NoSkillUpFound=Stvarna brojka bi mogla biti veća jer nije zabilježen zadnji porast iskustva.
+PlayerStatsExperience.ExperienceChange.title=Dobitak iskustva
+PlayerStatsExperience.ExperienceChange.title.abbr=IS+
 
 #Series statistics
 rating.average=Prosječna ocjena
