*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9274 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -392,6 +392,11 @@ module.PlayerStatsExperience.desc=Viser erfaring underniveau på spillere statis
 # IN-GAME STRINGS. translate first
 
 #PlayerStatsExperience
+PlayerStatsExperience.ExperienceText=Han har allerede indsamlet mellem %1 og %2 ud af 28 rutine points. Hans erfaring er mellem %3 og %4.
+PlayerStatsExperience.NotAllMatchesVisible=Den faktiske værdi kan være højere, fordi alle kampe vises ikke.
+PlayerStatsExperience.NoSkillUpFound=Den faktiske værdi kan være højere, fordi ingen rutine stigning blev fundet.
+PlayerStatsExperience.ExperienceChange.title=Rutine gevinst
+PlayerStatsExperience.ExperienceChange.title.abbr=RU+
 
 #Series statistics
 rating.average=Gennemsnitsvurdering
@@ -812,7 +817,7 @@ links.custom.tags=Tags
 links.custom.help=Hjælp
 
 #following string uses pluralForms
-notify.newMail=Du har modtaget %s nye mail.;Du har modtaget %s nye mails.
+notify.newMail=Du har modtaget %s ny mail.;Du har modtaget %s nye mails.
 #following string uses pluralForms
 notify.newForumMessage=Der er %s ny forum svar til dig.;Der er %s nye forum svar til dig.
 
