--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -394,6 +394,11 @@ module.PlayerStatsExperience.desc=Sublevel der Erfahrung auf der Spielerstatisti
 # IN-GAME STRINGS. translate first
 
 #PlayerStatsExperience
+PlayerStatsExperience.ExperienceText=Von 28 erforderlichen Punkten hat er mittlerweile %1 bis %2 gesammelt. Seine Erfahrung liegt zwischen %3 und %4.
+PlayerStatsExperience.NotAllMatchesVisible=Der tatsächliche Wert kann höher liegen da nicht alle Spiele angezeigt werden.
+PlayerStatsExperience.NoSkillUpFound=Der tatsächliche Wert kann höher liegen da der letzte Erfahrungssprung nicht bekannt ist.
+PlayerStatsExperience.ExperienceChange.title=Erfahrungsgewinn
+PlayerStatsExperience.ExperienceChange.title.abbr=XP+
 
 #Series statistics
 rating.average=Durchschnittliche Bewertung
