--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -394,6 +394,7 @@ module.PlayerStatsExperience.desc=Les points d'expérience acquis s'affichent su
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Il a déjà accumulé entre %1 et %2 des 28 points d'expérience requis. Son niveau d'expérience se situe entre %3 et %4.
+PlayerStatsExperience.NotAllMatchesVisible=La valeur réelle pourrait être plus élevée car tous les matchs ne sont pas affichés.
 PlayerStatsExperience.NoSkillUpFound=La valeur réelle pourrait être plus élevée car aucun gain d'expérience n'a été trouvé.
 PlayerStatsExperience.ExperienceChange.title=Gain d'expérience
 PlayerStatsExperience.ExperienceChange.title.abbr=XP+
@@ -615,7 +616,7 @@ matchOrder.away.abbr=E
 
 #Skills
 Playmaking=Construction
-Playmaking.abbr=Mi
+Playmaking.abbr=Co
 Winger=Ailier
 Winger.abbr=Ai
 Scoring=Buteur
@@ -657,7 +658,7 @@ match.pos.lb=Arrière gauche
 match.pos.lb.abbr=AG
 match.pos.lcd=Défenseur central gauche
 match.pos.lcd.abbr=DCG
-match.pos.mcd=Milieu défenseur central
+match.pos.mcd=Défenseur central
 match.pos.mcd.abbr=DC
 match.pos.rcd=Défenseur central droit
 match.pos.rcd.abbr=DCD
@@ -667,9 +668,9 @@ match.pos.lw=Ailier gauche
 match.pos.lw.abbr=ALG
 match.pos.lcm=Milieu de terrain gauche
 match.pos.lcm.abbr=MCG
-match.pos.mcm=Milieu de terrain centre
+match.pos.mcm=Milieu de terrain
 match.pos.mcm.abbr=MC
-match.pos.rcm=Milieu de terrain central droit
+match.pos.rcm=Milieu de terrain droit
 match.pos.rcm.abbr=MCD
 match.pos.rw=Ailier droit
 match.pos.rw.abbr=ALD
