--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -90,12 +90,14 @@ module.EmbedMedia.EmbedYoutubeVideos.desc=Integreer YouTube filmpjes
 module.EmbedMedia.EmbedVimeoVideos.desc=Integreer Vimeo filmpjes
 module.EmbedMedia.EmbedFunnyOrDieVideos.desc=Integreer FunnyOrDie filmpjes
 module.EmbedMedia.EmbedDailymotionVideos.desc=Sluit Dailymotion videos in
+module.EmbedMedia.EmbedModeOEmebed.desc=Gebruik oEmbed om plaatjes/filmpjes te embedden in een forumpost (alleen voor Firefox en Chrome)
 module.EmbedMedia.ReplaceLinksByTitles.desc=Vervang de tekst-snelkoppeling door het label van het media item, bijv. de naam van de afbeelding
 module.EmbedMedia.EmbedSoundCloud.desc=Integreer SoundCloud
 module.EmbedMedia.EmbedFlickrImages.desc=Integreer Flickr plaatjes
 module.EmbedMedia.EmbedDeviantArtImages.desc=Integreer DeviantArt plaatjes
 module.EmbedMedia.EmbedGenericImages.desc=Integreer plaatjes als de snelkoppeling een snelkoppeling naar een plaatje is
 module.EmbedMedia.EmbedGenericImagesClever.desc=Probeer het correcte adres te raden als de originele snelkoppeling niet naar een plaatje schijnt te verwijzen
+module.EmbedMedia.EmbedImageshack.desc=Uitgebreide ImageShack ondersteuning (alleen Firefox en Chrome)
 #Forum direct page links
 module.DirectPageLinks.desc=Voeg snelkoppelingen toe die naar een specifieke pagina van een forum-onderwerp verwijzen
 #
@@ -275,6 +277,7 @@ module.LeagueNewsFilter.lineup_changes.desc=Toon alleen opstellingswijzigingen
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Verplaats het overzicht, met welke managers online zijn, naar boven op de regio pagina. Pas op\: dit kan erg traag worden als er meer dan 100 managers online zijn.
 module.TeamPopupLinks.desc=Toon een klein pop-up venster met snelkoppelingen als je je muis op een team ID link plaatst
+module.TeamPopupLinks.TeamHighlight.desc=Markeer huidige team in tabellen
 module.TeamPopupLinks.TeamLinks.desc=Toon team pop-up naar teamlinks
 module.TeamPopupLinks.UserLinks.desc=Toon team pop-up naar managerlinks
 module.TeamPopupLinks.Manager.desc=Link naar de manager (alleen voor teamlinks)
@@ -376,12 +379,15 @@ module.MatchSimulator.desc=Voeg een wedstrijden simulator toe aan de opstellings
 module.MatchSimulator.RatingsOnTop.desc=Laat de ratings voorspelling bovenop de opstelling staan
 module.MatchSimulator.RatingsBelow.desc=Plaats de ratings voorspelling onder de opstelling
 module.MatchSimulator.RatingsRight.desc=Plaats de ratings voorspelling rechts van de opstelling
+module.MatchSimulator.HTMSPrediction.desc=HTMS voorspelling toevoegen
 module.HeaderToggle.desc=Klik op bepaalde headers om de sectie te verbergen of juist te zien. Onthoudt de laatst gekozen instelling, gebaseerd op pagina & header titel.
 module.Filter.desc=Voeg filters toe aan de lijst met top spelers
 module.RatingsDisplay.desc=Laat gemiddelde ratings in de statistieken in het 0-20 bereik zien
 module.RatingsDisplay.DenominationsRange.desc=In de 0-20 benaming
 module.RatingsDisplay.HatStats.desc=Als HatStats
+module.RatingsDisplay.HTSums.desc=zoals Hattrick ratings sommeert
 module.SafeForWork.desc=Vervangt het pictogram en de titeltekst van de Hattrick tabbladen om minder verdacht te lijken. Zorg ervoor dat u alle andere modules die riskant zijn, vooral de "Alert" modules, ook uitschakelt.
+module.PlayerStatsExperience.desc=Geeft de ervaring subskill op de playerStats pagina
 # -----------------------------------------------------------------------------
 
 
@@ -390,6 +396,7 @@ module.SafeForWork.desc=Vervangt het pictogram en de titeltekst van de Hattrick 
 #PlayerStatsExperience
 
 #Series statistics
+rating.average=Gemiddelde rating
 
 #Save for work
 SafeForWork.title=Titel
@@ -423,6 +430,12 @@ YouthPromotes.today=Speler kan vandaag gepromoveerd worden\!
 #teamstats+filters
 TeamStats.boxheader=Teamoverzicht
 TeamStats.General=Algemeen
+TeamStats.Attributes=Kenmerken
+TeamStats.Skills=Vaardigheden
+TeamStats.Players=Spelers
+TeamStats.Total=Totaal
+TeamStats.Selected=Geselecteerd
+TeamStats.Average=Gemiddelde
 TeamStats.PlayerNotToOld=Spelers < 19jr
 TeamStats.PlayerToOld=Spelers >\= 19jr
 TeamStats.Cards=Kaarten
@@ -548,6 +561,7 @@ Filters.ok=Ok
 Filters.clear=Verwijder
 Filters.noFilter=Geen filter
 Filters.none=Geen
+Filters.Attributes=Kenmerk filters
 Filters.days=Dagen
 Filters.tsi=TSI
 Filters.stamina=Conditie
@@ -557,6 +571,10 @@ Filters.specialty=Specialiteit
 Filters.stars=Sterren
 Filters.minimum=Minstens
 Filters.maximum=Maximaal
+Filters.over=Over
+Filters.under=Onder
+Filters.equal=Gelijk aan
+Filters.notEqual=Niet gelijk aan
 
 
 match.type.league=Competitie
@@ -579,6 +597,7 @@ matchOrder.swapPositions=Wissel posities
 matchOrder.options=Opties
 matchOrder.staminaDiscount=Conditie correctie
 matchOrder.staminaDiscount.title=Sector ratings worden verdisconteerd op basis van spelers' bijdrage aan deze sector
+matchOrder.attVsDef=Aanval vs. verdediging
 matchOrder.summary=Samenvatting
 matchOrder.tournamentMatch=Toernooi wedstrijd
 
