--- a/content/locale/pt-PT/foxtrick.properties
+++ b/content/locale/pt-PT/foxtrick.properties
@@ -483,7 +483,7 @@ Last_position.abbr=POS
 #following string uses pluralForms
 Last_match_played_as_at=Jogou min %1 como %2 na sua última partida em 3%.
 Last_match_didnot_play=Não tenha jogado ainda.
-Bruised=Ferido
+Bruised=Magoado
 Bruised.abbr=Fer
 Injured=Lesionado
 Injured.abbr=Les
@@ -654,7 +654,7 @@ flagCollectionToMap.World=Mundo
 
 # TransferSearchResultFilters
 TransferSearchResultFilters.hideBruised=Ocultar machucado
-TransferSearchResultFilters.hideInjured=Ocultar feridos
+TransferSearchResultFilters.hideInjured=Ocultar lesionados
 TransferSearchResultFilters.hideSuspended=Ocultar suspenso
 TransferSearchResultFilters.days=Dias\:
 
