*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9291 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -1,5 +1,6 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
+properties.translators=Udviklere
 
 # Hints:
 # translate the right side of the = sign.
@@ -294,7 +295,7 @@ module.TeamPopupLinks.NextMatch.desc=Næste Kamp
 module.TeamPopupLinks.AddNextMatch.desc=Tilføjer næste kamp til HT Live
 module.TeamPopupLinks.YouthMatches.desc=Ungdomskampe
 module.TeamPopupLinks.Coach.desc=Træner
-module.TeamPopupLinks.CustomLink.desc=Brugerdefinerede links i adskilte linjer. Links [BrugerID] og [HoldID] vil blive erstattet af de faktiske id'er. Eksempel\: {"link"\:"http\://example.com/[holdid]", "Titel"\: "eksempel link", "mere"\: falsk, "nyTab"\: sandt}
+module.TeamPopupLinks.CustomLink.desc=Brugerdefinerede links i adskilte linjer. Tags som [BrugerID] og [HoldID] vil blive erstattet af de faktiske id'er. Eksempel\: {"link"\:"http\://example.com/[holdid]", "Titel"\: "eksempel link", "mere"\: falsk, "nyTab"\: sandt}
 module.SkillColoring.desc=Bedre visualisering af evner
 module.SkillColoring.skill_color.desc=Farvelægger evner
 module.SkillColoring.only_skill_color.desc=Farvelægger kun evner og ikke personligheder, fan humør etc.
@@ -545,7 +546,7 @@ ForumSpecialBBCode.article=Tilføj ArtikelID
 ForumSpecialBBCode.clock=Tilføj aktuelle tid
 ForumSpecialBBCode.spoiler=Tilføj spoiler
 ForumSpecialBBCode.pre=Indsæt 'pre' format link
-ForumSpecialBBCode.table=Indsæt "tabel" format Link-filter til konvertere markerede tekst til en tabel (linjer konverteres i rækker. Tekst adskilt af "%s" vil blive konverteret til celler.)
+ForumSpecialBBCode.table=Indsæt "tabel" format tags for at konvertere markerede tekst til en tabel (linjer konverteres i rækker. Tekst adskilt af "%s" vil blive konverteret til celler.)
 ForumSpecialBBCode.tableSeparator=Konvertere "%s" til celler
 ForumSpecialBBCode.enterSeparator=Angiv en brugerdefineret separator
 ForumSpecialBBCode.forumSymbol=Indsæt "%s"
@@ -733,6 +734,7 @@ Last_match.abbr=Sidste
 Last_stars=Seneste stjerner
 Last_stars.abbr=SS
 Last_stars_EndOfGame=Sidste gule stjerner
+Last_stars_EndOfGame.abbr=Rt
 Last_stars_decline=Sidste brun stjerner
 Last_stars_decline.abbr=forskel
 Last_position=Seneste position
@@ -815,6 +817,8 @@ links.custom.confirmremove=Sikker på at fjerne?
 links.custom.addtag=Tilføj et Tag
 links.custom.tags=Tags
 links.custom.help=Hjælp
+links.custom.helptext=For det første, dette er blot redigerings tilstand. Hvis du klikker på overskriften af denne boks, skifter du mellem normal og redigerings tilstand.De links to tilføjer virker kun i normal tilstand. Eksterne statiske links er nemt at tilføje, du skal blot tilføje den fulde URL (eks\: http\://example.org/league/427/). For interne statiske links spring serverdelen over  (Eks\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Du behøver kun tags for sjældne dynamiske links. Med tags, ændres links dynamisk ved hjælp af information om den side du er på.For eksempel For example http\://example.org/league/[LeagueID]vil altid føre dig til den side i serien med den pågældende ID, som du netop ser i Hattrick. De tags, der er tilgængelige på hver side er angivet i tilvalgs-boksen.Du kan kun bruge dem, der er noteret på den side, hvor du tilføjer brugerdefinerede link. Teksten i boksen er blot et udsnit af skabelonen.Du kan skrive et tag selv (ved hjælp af []).\n
+links.custom.helptext2=Du kan også dele og eksportere dine links. Klik på Eksportér og vælge en fil for at gemme linket. Links er knyttet til den fil, dermed kan du gemme flere links i én fil. For at importere links skal du gå til import afsnit i indstillingerne. Kun poster i den valgte fil vil blive importeret, som i dette tilfælde er dine links. Ingen af ​​dine eksisterende links vil blive slettet.
 
 #following string uses pluralForms
 notify.newMail=Du har modtaget %s ny mail.;Du har modtaget %s nye mails.
