--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -296,6 +296,7 @@ module.TeamPopupLinks.LastLineup.desc=Last lineup
 module.TeamPopupLinks.NextMatch.desc=Next Match
 module.TeamPopupLinks.AddNextMatch.desc=Adds next match to HT Live
 module.TeamPopupLinks.YouthMatches.desc=Youth matches
+module.TeamPopupLinks.Tournaments.desc=Tournaments
 module.TeamPopupLinks.Coach.desc=Coach
 module.TeamPopupLinks.CustomLink.desc=Custom links in seperate lines. The tags [UserID] and [TeamID] will be replaced by the actual IDs. Example\: {"link"\:"http\://example.com/[teamid]", "title"\:"example link", "more"\: false, "newTab"\:true}
 module.SkillColoring.desc=Better visualisation of skills
@@ -692,6 +693,7 @@ match.ratings.ifkshort=I
 
 #teampopups
 LastLineup=Last lineup
+Tournaments=Tournaments
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Show map
