--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -84,7 +84,7 @@ module.FormatPostingText.desc=Reemplaza las etiquetas HT-ML de FoxTrick con etiq
 module.FormatPostingText.NestedQuotesAsSpoilers.desc=Mostrar citas anidadas en un spoiler. Especificar el nivel inferior.
 #EmbedMedia
 module.EmbedMedia.desc=Detectar vínculos a archivos multimedia e incrustarlos dentro del sitio (Experimental)
-module.EmbedMedia.EmbedYoutubeVideos.desc=Videos YouTube Incrustados
+module.EmbedMedia.EmbedYoutubeVideos.desc=Incrustar vídeos de YouTube
 module.EmbedMedia.EmbedVimeoVideos.desc=Incrustar videos de Vimeo
 module.EmbedMedia.EmbedFunnyOrDieVideos.desc=Incrustar vídeos de FunnyOrDie
 module.EmbedMedia.EmbedDailymotionVideos.desc=Incrustar vídeos de Dailymotion
